Updated to Java 25 and Jena 4.10.0, with many other minor improvements