@@ -22,7 +22,8 @@ import java.io.PipedOutputStream;
 import java.io.Reader;
 import java.io.StringWriter;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.HashMap;
@@ -99,8 +100,9 @@ public class RemoteModel {
 	 * Issue update query to the remote KB
 	 *
 	 * @param updateQuery A SPARQL/Update query string
+	 * @throws IOException, URISyntaxException
 	 */
-	public void updateQuery(String updateQuery) throws IOException
+	public void updateQuery(String updateQuery) throws IOException, URISyntaxException
 	{
 		Map<String, Object> params = new HashMap<>();
 		params.putAll(_defaultParams);
@@ -115,8 +117,9 @@ public class RemoteModel {
 	 * Issue update query to the remote KB
 	 *
 	 * @param updateQuery A SPARQL/Update query object
+	 * @throws IOException, URISyntaxException
 	 */
-	public void updateQuery(Query updateQuery) throws IOException
+	public void updateQuery(Query updateQuery) throws IOException, URISyntaxException
 	{
 		updateQuery(updateQuery.toString());
 	}
@@ -126,9 +129,10 @@ public class RemoteModel {
 	 *
 	 * @param selectQuery the query to execute
 	 * @return the ResultSet answer.
+	 * @throws IOException, URISyntaxException
 	 */
 	@SuppressWarnings("resource")
-	public ResultSet selectQuery(String selectQuery) throws IOException {
+	public ResultSet selectQuery(String selectQuery) throws IOException, URISyntaxException {
 		Map<String, Object> params = new HashMap<>();
 		params.putAll(_defaultParams);
 		params.put("query", selectQuery);
@@ -141,8 +145,9 @@ public class RemoteModel {
 	 *
 	 * @param selectQuery the query to execute
 	 * @return the ResultSet answer.
+	 * @throws IOException, URISyntaxException
 	 */
-	public ResultSet selectQuery(Query selectQuery) throws IOException {
+	public ResultSet selectQuery(Query selectQuery) throws IOException, URISyntaxException {
 		return selectQuery(selectQuery.toString());
 	}
 
@@ -151,8 +156,9 @@ public class RemoteModel {
 	 *
 	 * @param askQuery The query to execute, in compiled Jena form
 	 * @return the boolean answer to the query
+	 * @throws IOException, URISyntaxException
 	 */
-	public boolean askQuery(Query askQuery) throws IOException {
+	public boolean askQuery(Query askQuery) throws IOException, URISyntaxException {
 		return askQuery(askQuery.toString());
 	}
 
@@ -161,8 +167,9 @@ public class RemoteModel {
 	 *
 	 * @param askQuery The query to execute, in String form
 	 * @return the boolean answer to the query
+	 * @throws IOException, URISyntaxException
 	 */
-	public boolean askQuery(String askQuery) throws IOException {
+	public boolean askQuery(String askQuery) throws IOException, URISyntaxException {
 		Map<String, Object> params = new HashMap<>();
 		params.putAll(_defaultParams);
 		params.put("query", askQuery);
@@ -188,8 +195,9 @@ public class RemoteModel {
 	 *
 	 * @param constructQuery the query to execute
 	 * @return the Model answer.
+	 * @throws IOException, URISyntaxException
 	 */
-	public Model constructQuery(String constructQuery) throws IOException {
+	public Model constructQuery(String constructQuery) throws IOException, URISyntaxException {
 		Map<String, Object> params = new HashMap<>();
 		params.putAll(_defaultParams);
 		params.put("query", constructQuery);
@@ -205,8 +213,9 @@ public class RemoteModel {
 	 *
 	 * @param constructQuery the query to execute
 	 * @return the Model answer.
+	 * @throws IOException, URISyntaxException
 	 */
-	public Model constructQuery(Query constructQuery) throws IOException {
+	public Model constructQuery(Query constructQuery) throws IOException, URISyntaxException {
 		return constructQuery(constructQuery.toString());
 	}
 
@@ -221,7 +230,7 @@ public class RemoteModel {
 	 * @return The number of statements inserted
 	 */
 	public long insertStatements(String serializedStatements, RDFFormat format, String base,
-		boolean verifyData) throws IOException {
+		boolean verifyData) throws IOException, URISyntaxException {
 		return internalInsertStatements(serializedStatements, format, base, "", verifyData);
 	}
 
@@ -236,7 +245,7 @@ public class RemoteModel {
 	 * @return The number of statements inserted
 	 */
 	public long insertStatements(String serializedStatements, String format, String base,
-		boolean verifyData) throws IOException {
+		boolean verifyData) throws IOException, URISyntaxException {
 		return internalInsertStatements(serializedStatements,
 			RDFFormat.parseJenaFormatString(format), base, "", verifyData);
 	}
@@ -253,7 +262,7 @@ public class RemoteModel {
 	 * @return The number of statements inserted
 	 */
 	public long insertStatements(String serializedStatements, RDFFormat format, String base,
-		String namedGraphURI, boolean verifyData) throws IOException {
+		String namedGraphURI, boolean verifyData) throws IOException, URISyntaxException {
 		return internalInsertStatements(serializedStatements, format, base, namedGraphURI, verifyData);
 	}
 
@@ -269,7 +278,7 @@ public class RemoteModel {
 	 * @return The number of statements inserted
 	 */
 	public long insertStatements(String serializedStatements, String format, String base,
-		String namedGraphURI, boolean verifyData) throws IOException {
+		String namedGraphURI, boolean verifyData) throws IOException, URISyntaxException {
 		return internalInsertStatements(serializedStatements,
 			RDFFormat.parseJenaFormatString(format), base, namedGraphURI, verifyData);
 	}
@@ -286,7 +295,7 @@ public class RemoteModel {
 	 * @return The number of statements inserted
 	 */
 	public long insertStatements(InputStream serializedStatements, RDFFormat format,
-		String base, boolean verifyData) throws IOException {
+		String base, boolean verifyData) throws IOException, URISyntaxException {
 		return internalInsertStatements(serializedStatements, format, base, "", verifyData);
 	}
 
@@ -302,7 +311,7 @@ public class RemoteModel {
 	 * @return The number of statements inserted
 	 */
 	public long insertStatements(InputStream serializedStatements, String format,
-		String base, boolean verifyData) throws IOException {
+		String base, boolean verifyData) throws IOException, URISyntaxException {
 		return internalInsertStatements(serializedStatements,
 			RDFFormat.parseJenaFormatString(format), base, "", verifyData);
 	}
@@ -320,7 +329,7 @@ public class RemoteModel {
 	 * @return The number of statements inserted
 	 */
 	public long insertStatements(InputStream serializedStatements, RDFFormat format,
-		String base, String namedGraphURI, boolean verifyData) throws IOException {
+		String base, String namedGraphURI, boolean verifyData) throws IOException, URISyntaxException {
 		return internalInsertStatements(serializedStatements, format, base, namedGraphURI, verifyData);
 	}
 
@@ -337,7 +346,7 @@ public class RemoteModel {
 	 * @return The number of statements inserted
 	 */
 	public long insertStatements(InputStream serializedStatements, String format,
-		String base, String namedGraphURI, boolean verifyData) throws IOException {
+		String base, String namedGraphURI, boolean verifyData) throws IOException, URISyntaxException {
 		return internalInsertStatements(serializedStatements,
 			RDFFormat.parseJenaFormatString(format), base, namedGraphURI, verifyData);
 	}
@@ -348,7 +357,7 @@ public class RemoteModel {
 	 * @param model A Jena Model containing the statements to be inserted.
 	 * @return The number of statements inserted
 	 */
-	public long insertStatements(Model model) throws IOException {
+	public long insertStatements(Model model) throws IOException, URISyntaxException {
 		return insertStatements(model, "");
 	}
 
@@ -359,7 +368,7 @@ public class RemoteModel {
 	 * @param namedGraphURI The uri of the graph to insert into
 	 * @return The number of statements inserted
 	 */
-	public long insertStatements(final Model model, String namedGraphURI) throws IOException {
+	public long insertStatements(final Model model, String namedGraphURI) throws IOException, URISyntaxException {
 		RDFFormat format = RDFFormat.NTRIPLES;
 		// Pipes can be tricky.  Both in and out must be created in the main thread to prevent
 		// the main thread reading before the pipe has been connected.  Also, the worker thread must
@@ -393,9 +402,10 @@ public class RemoteModel {
 	 * The base URI may be null if there are no relative URIs to convert.
 	 * @param namedGraphURI The uri of the graph to insert into
 	 * @return The number of statements inserted
+	 * @throws IOException, URISyntaxException
 	 */
 	protected long internalInsertStatements(Object serializedStatements, RDFFormat format,
-		String base, String namedGraphURI, boolean verifyData) throws IOException {
+		String base, String namedGraphURI, boolean verifyData) throws IOException, URISyntaxException {
 		Map<String, Object> params = new HashMap<>();
 		if (format != null) {
 			params.put("dataFormat", format);
@@ -440,7 +450,7 @@ public class RemoteModel {
 	 * @param format Format of the data.
 	 */
 	public void deleteStatements(String serializedStatements, RDFFormat format)
-		throws IOException {
+		throws IOException, URISyntaxException {
 		deleteStatements(serializedStatements, format, "");
 	}
 
@@ -451,7 +461,7 @@ public class RemoteModel {
 	 * @param format Format of the data.
 	 */
 	public void deleteStatements(String serializedStatements, String format)
-		throws IOException {
+		throws IOException, URISyntaxException {
 		deleteStatements(serializedStatements, RDFFormat.parseJenaFormatString(format), "");
 	}
 
@@ -463,7 +473,7 @@ public class RemoteModel {
 	 * @param format Format of the data.
 	 */
 	public void deleteStatements(InputStream serializedStatements, RDFFormat format)
-		throws IOException {
+		throws IOException, URISyntaxException {
 		deleteStatements(serializedStatements, format, "");
 	}
 
@@ -475,7 +485,7 @@ public class RemoteModel {
 	 * @param format Format of the data.
 	 */
 	public void deleteStatements(InputStream serializedStatements, String format)
-		throws IOException {
+		throws IOException, URISyntaxException {
 		deleteStatements(serializedStatements, RDFFormat.parseJenaFormatString(format), "");
 	}
 
@@ -487,7 +497,7 @@ public class RemoteModel {
 	 * @param namedGraphURI The URI of the graph to delete from
 	 */
 	public void deleteStatements(String serializedStatements, RDFFormat format,
-		String namedGraphURI) throws IOException {
+		String namedGraphURI) throws IOException, URISyntaxException {
 		InputStream in = new ByteArrayInputStream(serializedStatements.getBytes());
 		deleteStatements(in, format, namedGraphURI);
 	}
@@ -500,7 +510,7 @@ public class RemoteModel {
 	 * @param namedGraphURI The URI of the graph to delete from
 	 */
 	public void deleteStatements(String serializedStatements, String format,
-		String namedGraphURI) throws IOException {
+		String namedGraphURI) throws IOException, URISyntaxException {
 		deleteStatements(serializedStatements, RDFFormat.parseJenaFormatString(format),
 			namedGraphURI);
 	}
@@ -514,7 +524,7 @@ public class RemoteModel {
 	 * @param namedGraphURI The uri of the graph to delete from
 	 */
 	public void deleteStatements(InputStream serializedStatements, RDFFormat format,
-		String namedGraphURI) throws IOException {
+		String namedGraphURI) throws IOException, URISyntaxException {
 		Model tempModel = ModelFactory.createDefaultModel();
 		tempModel.read(serializedStatements, "", format.toString());
 		deleteStatements(tempModel, namedGraphURI);
@@ -527,9 +537,10 @@ public class RemoteModel {
 	 *        serialized form
 	 * @param format Format of the data.
 	 * @param namedGraphURI The uri of the graph to delete from
+	 * @throws IOException, URISyntaxException
 	 */
 	public void deleteStatements(InputStream serializedStatements, String format,
-		String namedGraphURI) throws IOException {
+		String namedGraphURI) throws IOException, URISyntaxException {
 		deleteStatements(serializedStatements, RDFFormat.parseJenaFormatString(format),
 			namedGraphURI);
 	}
@@ -539,7 +550,7 @@ public class RemoteModel {
 	 *
 	 * @param model A Jena Model containing the statements to be deleted.
 	 */
-	public void deleteStatements(Model model) throws IOException {
+	public void deleteStatements(Model model) throws IOException, URISyntaxException {
 		deleteStatements(model, "");
 	}
 
@@ -549,7 +560,7 @@ public class RemoteModel {
 	 * @param model A Jena Model containing the statements to be deleted.
 	 * @param namedGraphURI The uri of the graph to delete from
 	 */
-	public void deleteStatements(Model model, String namedGraphURI) throws IOException {
+	public void deleteStatements(Model model, String namedGraphURI) throws IOException, URISyntaxException {
 		StringWriter wtr = new StringWriter();
 
 		wtr.write("delete data { ");
@@ -577,7 +588,7 @@ public class RemoteModel {
 	 *
 	 * @param namedGraphURI The uri of the named graph to create
 	 */
-	public void createNamedGraph(String namedGraphURI) throws IOException {
+	public void createNamedGraph(String namedGraphURI) throws IOException, URISyntaxException {
 		createNamedGraph(namedGraphURI, false);
 	}
 
@@ -589,7 +600,7 @@ public class RemoteModel {
 	 * the URI already exists unless the SILENT is set to true, then no error is generated
 	 * and execution of the sequence of SPARQL/Update operations continues.
 	 */
-	public void createNamedGraph(String namedGraphURI, boolean silent) throws IOException {
+	public void createNamedGraph(String namedGraphURI, boolean silent) throws IOException, URISyntaxException {
 		String query = "create %1$s graph <%2$s>".formatted(silent ? "silent" : "", namedGraphURI);
 		this.updateQuery(query);
 	}
@@ -599,7 +610,7 @@ public class RemoteModel {
 	 *
 	 * @param namedGraphURI The uri of the named graph to drop
 	 */
-	public void dropNamedGraph(String namedGraphURI) throws IOException {
+	public void dropNamedGraph(String namedGraphURI) throws IOException, URISyntaxException {
 		dropNamedGraph(namedGraphURI, false);
 	}
 
@@ -611,7 +622,7 @@ public class RemoteModel {
 	 * if the specified named graph does not exist. If SILENT is true, this error is ignored
 	 * and execution of a sequence of SPARQL/Update operations continues.
 	 */
-	public void dropNamedGraph(String namedGraphURI, boolean silent) throws IOException {
+	public void dropNamedGraph(String namedGraphURI, boolean silent) throws IOException, URISyntaxException {
 		String query = "drop %1$s graph <%2$s>".formatted(silent ? "silent" : "", namedGraphURI);
 		this.updateQuery(query);
 	}
@@ -624,7 +635,7 @@ public class RemoteModel {
 	 * @param rightGraphURI The second named graph in the union
 	 */
 	public void createNamedUnionGraph(String namedUnionGraphURI,
-		String leftGraphURI, String rightGraphURI) throws IOException {
+		String leftGraphURI, String rightGraphURI) throws IOException, URISyntaxException {
 
 		String query = """
 			prefix parPF: <java:com.bbn.parliament.server.pfunction.>
@@ -640,7 +651,7 @@ public class RemoteModel {
 	 *
 	 * @return an Iterator of Strings representing uris for the named graphs
 	 */
-	public Iterator<String> getAvailableNamedGraphs() throws IOException {
+	public Iterator<String> getAvailableNamedGraphs() throws IOException, URISyntaxException {
 		String query = "SELECT ?g WHERE { GRAPH ?g { } }";
 
 		ResultSet results = selectQuery(query);
@@ -653,7 +664,7 @@ public class RemoteModel {
 	 *
 	 * @param namedGraphURI URI of the named graph to clear
 	 */
-	public void clear(String namedGraphURI) throws IOException {
+	public void clear(String namedGraphURI) throws IOException, URISyntaxException {
 		Map<String, Object> params = new HashMap<>();
 		params.put(P_GRAPH, namedGraphURI);
 		params.put(P_PERFORM_CLEAR, "yes");
@@ -665,7 +676,7 @@ public class RemoteModel {
 	}
 
 	/** Clears the entire repository. */
-	public void clearAll() throws IOException {
+	public void clearAll() throws IOException, URISyntaxException {
 		Map<String, Object> params = new HashMap<>();
 		params.put(P_CLEAR_ALL, "yes");
 		params.put(P_PERFORM_CLEAR, "yes");
@@ -686,7 +697,7 @@ public class RemoteModel {
 	 * @param zipFile File to write to.
 	 * @param format Format of the data.
 	 */
-	public void exportRepository(File zipFile, RDFFormat format) throws IOException {
+	public void exportRepository(File zipFile, RDFFormat format) throws IOException, URISyntaxException {
 		try (OutputStream os = new FileOutputStream(zipFile)) {
 			exportRepository(os, format);
 		}
@@ -703,7 +714,7 @@ public class RemoteModel {
 	 * @param zipFileOutputStream Stream to write to.
 	 * @param format Format of the data.
 	 */
-	public void exportRepository(OutputStream zipFileOutputStream, RDFFormat format) throws IOException {
+	public void exportRepository(OutputStream zipFileOutputStream, RDFFormat format) throws IOException, URISyntaxException {
 		Map<String, Object> params = new HashMap<>();
 		params.put("exportAll", "yes");
 		params.put("dataFormat", format.toString());
@@ -732,7 +743,7 @@ public class RemoteModel {
 	 *
 	 * @param zipFile File to read from.
 	 */
-	public void importRepository(File zipFile) throws IOException {
+	public void importRepository(File zipFile) throws IOException, URISyntaxException {
 		try (InputStream is = new FileInputStream(zipFile)) {
 			importRepository(is);
 		}
@@ -751,7 +762,7 @@ public class RemoteModel {
 	 *
 	 * @param zipFileInputStream Stream to read from.
 	 */
-	public long importRepository(InputStream zipFileInputStream) throws IOException {
+	public long importRepository(InputStream zipFileInputStream) throws IOException, URISyntaxException {
 		Map<String, Object> params = new HashMap<>();
 		params.put("import", "yes");
 		params.put("statements", zipFileInputStream);
@@ -781,13 +792,15 @@ public class RemoteModel {
 	}
 
 	private InputStream sendBulkRequest(Map<String, Object> params, String service,
-		boolean multipart) throws IOException {
+		boolean multipart) throws IOException, URISyntaxException {
 
 		String separator = _bulkEndpointUrl.endsWith("/") ? "" : "/";
 		return sendRequest(params, _bulkEndpointUrl + separator + service, multipart);
 	}
 
-	public InputStream sendRequest(Map<String, Object> params) throws IOException {
+	public InputStream sendRequest(Map<String, Object> params
+		) throws IOException, URISyntaxException {
+
 		return sendRequest(params, _sparqlEndpointUrl, false);
 	}
 
@@ -802,12 +815,13 @@ public class RemoteModel {
 	 * @return An InputStream containing the data that was returned by the server.
 	 * @throws IOException In case of an error in the request or in the processing of
 	 * it by the server.
+	 * @throws IOException, URISyntaxException
 	 */
 	private InputStream sendRequest(Map<String, Object> params, String endpointUrl,
-		boolean multipart) throws IOException {
+		boolean multipart) throws IOException, IOException, URISyntaxException {
 
 		// Create the connection
-		HttpURLConnection conn = (HttpURLConnection) new URL(endpointUrl).openConnection();
+		HttpURLConnection conn = (HttpURLConnection) new URI(endpointUrl).toURL().openConnection();
 		HttpClientUtil.setAcceptGZIPEncoding(conn);
 
 		if (multipart) {
